Fixes for cropped icons
Closes-Bug: #1541376

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -83,16 +83,21 @@
 }
 
 .glyphicon-warning-sign {
-  .icon-default-styles(-52px, -132px);
+  .icon-default-styles(-51px, -132px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-danger-sign {
-  .icon-default-styles(-13px, -132px);
-  width: 16px;
+  .icon-default-styles(-12px, -132px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-info-sign {
-  .icon-default-styles(-13px, -612px);
+  .icon-default-styles(-12px, -611px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-bell {
@@ -100,11 +105,15 @@
 }
 
 .glyphicon-trash {
-  .icon-default-styles(-13px, -691px);
+  .icon-default-styles(-12px, -691px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-edit {
-  .icon-default-styles(-56px, -691px);
+  .icon-default-styles(-52px, -691px);
+  width: 17px;
+  height: 17px;
 }
 
 .node-management-button-sizes {
@@ -184,14 +193,18 @@
 }
 
 .discard-changes-icon {
-  .icon-default-styles(-13px, -572px);
+  .icon-default-styles(-12px, -571px);
+  width: 17px;
+  height: 17px;
   &:hover {
-    background: url(@common-icons-sprite) -53px -572px no-repeat;
+    background: url(@common-icons-sprite) -52px -571px no-repeat;
   }
 }
 
 .glyphicon-ok-sign {
-  .icon-default-styles(-13px, -812px);
+  .icon-default-styles(-12px, -811px);
+  width: 17px;
+  height: 17px;
 }
 
 .glyphicon-lock {
@@ -294,6 +307,15 @@ button, .btn:not(.btn-link) {.font-semibold;}
   border-color: @navbar-color;
   outline: 0;
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(red(@navbar-color), green(@navbar-color), blue(@navbar-color), 0.6);
+}
+
+.btn > i {
+  display: inline-block;
+  float: left;
+  top: 1px;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
 }
 
 .btn-success {
@@ -789,7 +811,6 @@ input[type=range] {
           font-size: @base-font-size + 2px;
           float: left;
           width: 10%;
-          margin-top: 2px;
         }
         p {
           display: block;
@@ -1628,7 +1649,7 @@ input[type=range] {
   }
 
   .view-mode-switcher .btn-group label, .node-list-management-buttons button {
-    padding: 7px 10px 3px;
+    padding: 7px 10px 8px;
   }
 
   .well {
@@ -2782,9 +2803,6 @@ input[type=range] {
         }
         &.notification-type {
           width: 3%;
-          .glyphicon {
-            margin: 2px 0px;
-          }
         }
         &.notification-message {
           width: 91%;
@@ -2869,7 +2887,7 @@ input[type=range] {
       i {
         display: block;
         position: absolute;
-        top: 16px;
+        top: 15px;
         & + span {
           display: inline-block;
           margin-left: 24px;
@@ -2998,6 +3016,10 @@ input[type=range] {
       .wizard-steps-box {
         height: @wizard-body-height - @wizard-body-padding;
         overflow: auto;
+        i {
+          margin-top: -2px;
+          top: 4px;
+        }
         .form-group {
           margin-right: 0;
           margin-bottom: 0;
@@ -3120,6 +3142,9 @@ input[type=range] {
   .modal-footer {
     .btn-group {
       margin-left: 5px;
+    }
+    button > i {
+      float: none;
     }
   }
   &.always-show-scrollbar {
@@ -3843,8 +3868,8 @@ input[type=range] {
     left: 5px;
     top: 10px;
     z-index: 1;
-    width: 15px;
-    height: 15px;
+    width: 17px;
+    height: 17px;
   }
   .forms-box {
     .setting-section {
@@ -4402,7 +4427,7 @@ input[type=range] {
       input[type=text] {
         width: 240px;
         height: 32px;
-        margin: -9px 0 0 -13px;
+        margin: -21px 0 0 -12px;
         float: left;
       }
     }
@@ -4498,6 +4523,7 @@ input[type=range] {
         height: 15px;
         .discard-changes-icon {
           display: inline-block;
+          margin-top: -1px;
         }
       }
     }
